# tauri-icons-builder

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
html/: index.html  main.js  styles.css
icons/: icon.icns
src/: main.rs
